--- a/public/style.css
+++ b/public/style.css
@@ -55,6 +55,11 @@ body{
 }
 
 #aboutTextBox{
+  /*display: inline-block;*/
+  position:fixed;
+  overflow-y:scroll;
+  left:1%;
+  top:92%;
   width: 20px;
   height: 20px;
   margin: auto;
@@ -67,6 +72,10 @@ body{
 }
 
 #contactTextBox{
+  position:fixed;
+  overflow-y:scroll;
+  left:1%;
+  top:95%;
   width: 20px;
   height: 20px;
   margin: auto;
