--- a/views/website.erb
+++ b/views/website.erb
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="jquery-3.1.0.js" type="text/javascript"></script>
   <script src="website_jquery.js" type="text/javascript"></script>
+  <script src="lib/about.html" type="html"></script>
+  <script src="lib/contact.html" type="html"></script>
   <link rel="stylesheet" href="style.css">
-  <script src="./lib/about.html" type="html"></script>
   <title>Thady Condon</title>
 </head>
 <body>
@@ -21,7 +22,6 @@
   <div id='contactTextBox'></div>
   <script src="./lib/contactBox.js" type="text/javascript"></script>
   <script src="./lib/aboutBox.js" type="text/javascript"></script>
-
   <!-- <p style="position:absolute">This is a paragraph.</p> -->
 </body>
 </html>
