--- a/views/website.erb
+++ b/views/website.erb
@@ -18,6 +18,9 @@
     <li><a id='about'>About</a></li>
   </ul>
   <div id='titleName' class='center'>Thady Condon<span>|</span></div>
+  <div id='photoFrame'>
+    <img src="./lib/FullSizeRender_(1).jpg" alt="Smiley face">
+  </div>
   <div id='aboutTextBox'></div>
   <div id='contactTextBox'></div>
   <script src="./lib/contactBox.js" type="text/javascript"></script>
