--- a/public/style.css
+++ b/public/style.css
@@ -87,6 +87,15 @@ body{
   font-family: "Courier";
 }
 
+img{
+  position:fixed;
+  top: 30%;
+  left: 40%;
+  width: 220px;
+  height: 220px;
+  border: 5px solid white;
+}
+
 span{
   animation: blink 1s infinite;
   color: white;
