--- a/views/website.erb
+++ b/views/website.erb
@@ -18,13 +18,13 @@
     <li><a id='about'>About</a></li>
   </ul>
   <div id='titleName' class='center'>Thady Condon<span>|</span></div>
-  <div id='photoFrame'>
-    <img src="./lib/FullSizeRender_(1).jpg" alt="Smiley face">
-  </div>
+  <div id='photoDiv'></div>
+  <img id='photoFrame' src="./lib/FullSizeRender_(1).jpg" alt="Smiley face">
   <div id='aboutTextBox'></div>
   <div id='contactTextBox'></div>
   <script src="./lib/contactBox.js" type="text/javascript"></script>
   <script src="./lib/aboutBox.js" type="text/javascript"></script>
+  <script src="./lib/photoBox.js" type="text/javascript"></script>
   <!-- <p style="position:absolute">This is a paragraph.</p> -->
 </body>
 </html>
