--- a/views/website.erb
+++ b/views/website.erb
@@ -13,7 +13,7 @@
 <body>
   <ul>
     <li><a id='home'>Home</a></li>
-    <li><a id='news'>News</a></li>
+    <li><a id='trivia'>Trivia</a></li>
     <li><a id='contact'>Contact</a></li>
     <li><a id='about'>About</a></li>
   </ul>
@@ -22,11 +22,12 @@
   <img id='photoFrame' src="./lib/FullSizeRender_(1).jpg" class='photo'>
   <div id='aboutTextBox' class='movingBox'></div>
   <div id='contactTextBox' class='movingBox'></div>
-  <div id='blogTextBox' class='movingBox'></div>
+  <div id='triviaMovies' class='movingBox'></div>
+  <div id='triviaSport' class='movingBox'></div>
   <script src="./lib/contactBox.js" type="text/javascript"></script>
   <script src="./lib/aboutBox.js" type="text/javascript"></script>
   <script src="./lib/photoBox.js" type="text/javascript"></script>
-  <script src="./lib/blogBox.js" type="text/javascript"></script>
+  <script src="./lib/triviaBox.js" type="text/javascript"></script>
   <!-- <p style="position:absolute">This is a paragraph.</p> -->
 </body>
 </html>
