--- a/views/website.erb
+++ b/views/website.erb
@@ -11,19 +11,28 @@
   <title>Thady Condon</title>
 </head>
 <body>
+
   <ul>
     <li><a id='home'>Home</a></li>
-    <li><a id='trivia'>Trivia</a></li>
     <li><a id='contact'>Contact</a></li>
     <li><a id='about'>About</a></li>
+    <li class='dropdown'>
+      <a class='dropbtn'>Trivia</a>
+      <div class='dropdown-content'>
+          <a id='sports'>Sports</a>
+          <a id='movies'>Movies</a>
+      <div/>
+    </li>
   </ul>
   <div id='titleName' class='center'>Thady Condon<span>|</span></div>
   <div id='photoDiv' class='photo'></div>
   <img id='photoFrame' src="./lib/FullSizeRender_(1).jpg" class='photo'>
   <div id='aboutTextBox' class='movingBox'></div>
   <div id='contactTextBox' class='movingBox'></div>
-  <div id='triviaMovies' class='movingBox'></div>
-  <div id='triviaSport' class='movingBox'></div>
+  <!-- <div id='triviaAll' class='movingBox'> -->
+    <div id='triviaMovies' class='movingBox'></div>
+    <div id='triviaSport' class='movingBox'></div>
+  <!-- </div> -->
   <script src="./lib/contactBox.js" type="text/javascript"></script>
   <script src="./lib/aboutBox.js" type="text/javascript"></script>
   <script src="./lib/photoBox.js" type="text/javascript"></script>
