Combined animation boxes into one object. Positions and measurments assigned to variable in jQuery.

--- a/views/website.erb
+++ b/views/website.erb
@@ -25,8 +25,8 @@
     </li>
   </ul>
   <div id='titleName' class='center'>Thady Condon<span>|</span></div>
-  <div id='photoDiv' class='photo'></div>
-  <img id='photoFrame' src="./lib/FullSizeRender_(1).jpg" class='photo'>
+  <!-- <div id='photoDiv' class='photo'></div> -->
+  <div id='photoFrame'></div>
   <div id='aboutTextBox' class='movingBox'></div>
   <div id='contactTextBox' class='movingBox'></div>
   <!-- <div id='triviaAll' class='movingBox'> -->
@@ -37,6 +37,7 @@
   <script src="./lib/aboutBox.js" type="text/javascript"></script>
   <script src="./lib/photoBox.js" type="text/javascript"></script>
   <script src="./lib/triviaBox.js" type="text/javascript"></script>
+  <script src="./lib/box.js" type="text/javascript"></script>
   <!-- <p style="position:absolute">This is a paragraph.</p> -->
 </body>
 </html>
