--- a/public/style.css
+++ b/public/style.css
@@ -131,14 +131,23 @@ body{
   top:91%;
 }
 
-#photoDiv{
-  position: fixed;
+#photoFrame{
+  position:fixed;
+  overflow-y:scroll;
+  margin: auto;
+  left:1%;
+  top:83%;
+  width: 20px;
+  height: 20px;
+  background: #b3c8d0;
+  border: 1px solid white;
+  /*position: fixed;
   background: #b3c8d0;
   top: 30%;
   left: 40%;
   width: 220px;
   height: 220px;
-  border: 5px solid white;
+  border: 5px solid white;*/
 }
 /*
 #sports{
@@ -153,7 +162,7 @@ body{
   top:87%;
 }
 
-img{
+/*img{
   position:fixed;
   z-index: 1;
   top: 30%;
@@ -161,6 +170,11 @@ img{
   width: 220px;
   height: 220px;
   border: 5px solid white;
+}*/
+
+img{
+  max-width: 100%;
+  max-height:100%
 }
 
 span{
