--- a/public/style.css
+++ b/public/style.css
@@ -87,8 +87,6 @@ body{
   background: #000;
   font-family: "Courier";
   color: white;
-
-
 }
 
 #titleName{
@@ -132,15 +130,15 @@ body{
 }
 
 #photoFrame{
-  position:fixed;
+  /*position:fixed;
   overflow-y:scroll;
   margin: auto;
-  left:1%;
+  left:1%;*/
   top:83%;
-  width: 20px;
+  /*width: 20px;
   height: 20px;
   background: #b3c8d0;
-  border: 1px solid white;
+  border: 1px solid white;*/
   /*position: fixed;
   background: #b3c8d0;
   top: 30%;
@@ -149,6 +147,29 @@ body{
   height: 220px;
   border: 5px solid white;*/
 }
+
+#quote{
+  position:relative;
+  width: 500px;
+  height: 200px;
+  top: 40%;
+  left: 0%;
+  /*background: black;*/
+  font-size: 1em;
+  text-align: center;
+  margin: auto;
+  white-space: wrap;
+  overflow: hidden;
+  letter-spacing: .15em;
+  /*opacity: 0;*/
+  animation: blink2 4s  steps(40, start);
+}
+
+.fade {
+   opacity: 1;
+   transition: opacity .25s ease-in-out;
+ }
+
 /*
 #sports{
   float: right;
@@ -199,6 +220,10 @@ span{
 
 @keyframes blink{
   to{opacity: .0;}
+}
+
+@keyframes blink2{
+  from{opacity: .0;}
 }
 
 ::selection{
