--- a/views/website.erb
+++ b/views/website.erb
@@ -25,14 +25,12 @@
     </li>
   </ul>
   <div id='titleName' class='center'>Thady Condon<span>|</span></div>
-  <!-- <div id='photoDiv' class='photo'></div> -->
-  <div id='photoFrame'></div>
+  <div id='photoFrame' class='movingBox'></div>
   <div id='aboutTextBox' class='movingBox'></div>
   <div id='contactTextBox' class='movingBox'></div>
-  <!-- <div id='triviaAll' class='movingBox'> -->
-    <div id='triviaMovies' class='movingBox'></div>
-    <div id='triviaSport' class='movingBox'></div>
-  <!-- </div> -->
+  <div id='triviaMovies' class='movingBox'></div>
+  <div id='triviaSport' class='movingBox'></div>
+  <div id='quote' class='fade'></div>
   <script src="./lib/contactBox.js" type="text/javascript"></script>
   <script src="./lib/aboutBox.js" type="text/javascript"></script>
   <script src="./lib/photoBox.js" type="text/javascript"></script>
