--- a/views/website.erb
+++ b/views/website.erb
@@ -30,7 +30,7 @@
   <div id='contactTextBox' class='movingBox'></div>
   <div id='triviaMovies' class='movingBox'></div>
   <div id='triviaSport' class='movingBox'></div>
-  <div id='quote' class='fade'></div>
+  <div id='quote' class='loadFade'></div>
   <script src="./lib/contactBox.js" type="text/javascript"></script>
   <script src="./lib/aboutBox.js" type="text/javascript"></script>
   <script src="./lib/photoBox.js" type="text/javascript"></script>
