--- a/public/lib/quote.erb
+++ b/public/lib/quote.erb
@@ -1,3 +1,3 @@
-<div class"boxContent">
+<div>
   <p><i>"A life spent making mistakes is not only more honorable, but more useful than a life spent doing nothing"</i> - George Bernard Shaw</p>
 </div>
