--- a/public/style.css
+++ b/public/style.css
@@ -192,6 +192,13 @@ body{
   border: 5px solid white;
 }*/
 
+.photoFrameStill{
+  width: 690px;
+  height: 517px;
+  border: 5px solid white;
+  margin: 0 auto;
+}
+
 img{
   max-width: 100%;
   max-height:100%
