add photos to sports along with captions

--- a/public/lib/erb/sports.erb
+++ b/public/lib/erb/sports.erb
@@ -33,14 +33,14 @@
 
   <p>I really enjoyed running my own club. It was a modest club but my loyal subjects were incredible. I know a few of them are still training today and even competing. It was a brilliant time, thank you to everyone who was there.</p>
 
-  <div class='photoFrameStill'>
+  <div class='photoFrameStill' style="width:690;height:462;">
     <img src="./lib/photos/homeClub.jpg" style="filter:grayscale(100%);">
   </div>
-  <p class="caption">2012: My club at home, I miss the people and hope they're excelling</p>
+  <p class="caption" style="text-indent:50px">2012: My club at home, I miss the people and hope they're excelling</p>
 
   <p>My brother always helped with the club from the very beginning. I should say it was our club. On top of everything else he was able to create a logo and get clothing made</p>
 
-  <div class='photoFrameStill' style="width:200;heigth:200;">
+  <div class='photoFrameStill' style="width:145;height:200;">
     <img src="./lib/photos/homeArtwork.jpg">
   </div>
   <p class="caption">2012: My brother was there from the beginning. His logo can be seen here</p>
@@ -48,10 +48,10 @@
 
   <p>I still train every now and again, but not as regularly as I should. I don't know if i'll every get back into competeting but never say never. In London I'm able to train with my friend Shane from back home who is the trainer at the MMA Clinic in Angel. What a legend.</p>
 
-  <div class='photoFrameStill'>
+  <div class='photoFrameStill' style="width:690;height:388;">
     <img src="./lib/photos/corkLads.jpg" style="filter:grayscale(100%);">
   </div>
-  <p class="caption">2016: Cork lads in London. Shane, my trainer from home, is posing on the floor</p>
+  <p class="caption" style="text-indent:50px;">2016: Cork lads in London. Shane, my trainer from home, is posing on the floor</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/trainingBro.jpg" style="filter:grayscale(100%);">
