--- a/public/style.css
+++ b/public/style.css
@@ -193,10 +193,16 @@ body{
 }*/
 
 .photoFrameStill{
-  width: 690px;
-  height: 517px;
+  width: 600px;
+  height: 450px;
   border: 5px solid white;
   margin: 0 auto;
+}
+
+.caption{
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 2%;
 }
 
 img{
