Separated out the sports trivia box into individual section. BJJ and Muay Thai will have their own space.

--- a/public/lib/erb/muayThai.erb
+++ b/public/lib/erb/muayThai.erb
@@ -1,8 +1,6 @@
-<div id="sportsText" class="loadHidden">
-  <h1>Sports</h1>
-
-  <h2>Muay Thai</h2>
-  <p>I started Muay Thai Boxing when I was seventeen. I competed until I was twenty-six and open a small gym in the evenings when I was twenty-seven. I then had to close the gym because to move for further work.</p>
+<div id="muayThaiText" class="loadHidden">
+  <h1>Muay Thai</h1>
+  <p>I started Muay Thai Boxing when I was seventeen. I competed until I was twenty-six and open a small gym in the evenings when I was twenty-seven. I then had to close the gym because to move for work.</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/hollandComp.jpg" style="filter:grayscale(100%);">
