--- a/views/website.erb
+++ b/views/website.erb
@@ -17,8 +17,8 @@
     <li class='dropdown'>
       <a class='dropbtn'>Trivia</a>
       <div class='dropdown-content'>
-          <a id='sports'>Sports</a>
-          <a id='movies'>Movies</a>
+          <a id='muayThai'>Muay Thai</a>
+          <a id='bjj'>Brazilian Jiu-Jitsu</a>
       <div/>
     </li>
   </ul>
@@ -26,8 +26,8 @@
   <div id='photoFrame' class='movingBox'></div>
   <div id='aboutTextBox' class='movingBox'></div>
   <div id='contactTextBox' class='movingBox'></div>
-  <div id='triviaMovies' class='movingBox'></div>
-  <div id='triviaSport' class='movingBox'></div>
+  <div id='triviaBjj' class='movingBox'></div>
+  <div id='triviaMuayThai' class='movingBox'></div>
   <div id='quote' class='loadFade'></div>
   <script src="./lib/box.js" type="text/javascript"></script>
   <!-- <p style="position:absolute">This is a paragraph.</p> -->
