Working on the travel section of trivia.

--- a/views/website.erb
+++ b/views/website.erb
@@ -19,6 +19,7 @@
       <div class='dropdown-content'>
           <a id='muayThai'>Muay Thai</a>
           <a id='bjj'>Brazilian Jiu-Jitsu</a>
+          <a id='travel'>Travel</a>
       <div/>
     </li>
   </ul>
@@ -28,6 +29,7 @@
   <div id='contactTextBox' class='movingBox'></div>
   <div id='triviaBjj' class='movingBox'></div>
   <div id='triviaMuayThai' class='movingBox'></div>
+  <div id='triviaTravel' class='movingBox'></div>
   <div id='quote' class='loadFade'></div>
   <script src="./lib/box.js" type="text/javascript"></script>
   <!-- <p style="position:absolute">This is a paragraph.</p> -->
