--- a/public/style.css
+++ b/public/style.css
@@ -65,6 +65,7 @@ li.dropdown {
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
 .dropdown-content a {
@@ -179,6 +180,10 @@ body{
 }
 
 #triviaMuayThai{
+  top:87%;
+}
+
+#triviaTravel{
   top:87%;
 }
 
