--- a/views/website.erb
+++ b/views/website.erb
@@ -22,16 +22,17 @@
           <a id='travel'>Travel</a>
       <div/>
     </li>
+    <li><a id='portfolio'>Portfolio</a></li>
   </ul>
   <div id='titleName' class='center'>Thady Condon<span>|</span></div>
-  <div id='photoFrame' class='movingBox'></div>
+  <div id='photoFrame' class='movingBox'></div><br>
   <div id='aboutTextBox' class='movingBox'></div>
   <div id='contactTextBox' class='movingBox'></div>
   <div id='triviaBjj' class='movingBox'></div>
   <div id='triviaMuayThai' class='movingBox'></div>
   <div id='triviaTravel' class='movingBox'></div>
+  <div id='portfolioBox' class='movingBox'></div>
   <div id='quote' class='loadFade'></div>
   <script src="./lib/box.js" type="text/javascript"></script>
-  <!-- <p style="position:absolute">This is a paragraph.</p> -->
 </body>
 </html>
