--- a/public/lib/erb/portfolio.erb
+++ b/public/lib/erb/portfolio.erb
@@ -1,12 +1,11 @@
 <h1>Portfolio</h1>
 
 <div class='portfolioAll'>
-  <div>
-
     <div class='portfolioIndividual' id='newSummary'>
-      <h4>News Summary App</h4>
-      <p id="newsSum">This app provides the headlines of the latest news for Politics, Technology, Sports and Entertainment. It also provides a summary of the full articles.</p>
-    </div>
+      <div id="newsSum">
+        <h4>News Summary App</h4>
+        <p>This app provides the headlines of the latest news for Politics, Technology, Sports and Entertainment. It also provides a summary of the full articles.</p>
+      </div>
     <nav class="cl-effect-14" id="cl-effect-14">
       <a target='_blank' href="https://secret-beyond-87672.herokuapp.com">View Demo</a>
     </nav>
