--- a/public/style.css
+++ b/public/style.css
@@ -157,7 +157,7 @@ body{
   position:relative;
   width: 520px;
   height: 200px;
-  top: 40%;
+  top: 50%;
   left: 0%;
   /*background: black;*/
   font-size: 1em;
@@ -339,10 +339,31 @@ nav a:hover {
 }
 
 .portfolioIndividual {
-    width: 100%;
-    height: 50%;
+    width: 150px;
+    height: 200px;
     margin: 10%;
     border: 3px solid white;
+    padding: 5px;
     text-align: center;
     word-wrap: break-word;
+    background-color: black;
+}
+
+.portfolioIndividual {
+  opacity: 1;
+  transition: opacity .9s ease-in-out;
+}
+
+.tattooNews:hover {
+  opacity: 0;
+}
+
+#newsSum {
+  color: white;
+  opacity: .2;
+  transition: opacity .9s ease-in-out;
+}
+
+#newsSum:hover{
+  opacity: 1;
 }
