--- a/public/lib/erb/portfolio.erb
+++ b/public/lib/erb/portfolio.erb
@@ -8,6 +8,7 @@
       </div>
     <nav class="cl-effect-14" id="cl-effect-14">
       <a target='_blank' href="https://secret-beyond-87672.herokuapp.com">View Demo</a>
+      <a target='_blank' href="https://github.com/CONDOTH1/news-summary-api">View Code</a>
     </nav>
   </div>
 </div>
