Centering news summary portfolio div and links

--- a/public/lib/erb/portfolio.erb
+++ b/public/lib/erb/portfolio.erb
@@ -6,9 +6,11 @@
         <h4>News Summary App</h4>
         <p>This app provides the headlines of the latest news for Politics, Technology, Sports and Entertainment. It also provides a summary of the full articles.</p>
       </div>
-    <nav class="cl-effect-14" id="cl-effect-14">
-      <a target='_blank' href="https://secret-beyond-87672.herokuapp.com">View Demo</a>
-      <a target='_blank' href="https://github.com/CONDOTH1/news-summary-api">View Code</a>
+      <div class="linkBoxNews">
+      <nav class="cl-effect-14" id="cl-effect-14">
+        <a target='_blank' href="https://secret-beyond-87672.herokuapp.com">View Demo</a>
+        <a target='_blank' href="https://github.com/CONDOTH1/news-summary-api" id="viewCode">View Code</a></div>
     </nav>
-  </div>
+    </div>
+
 </div>
