Added all projects, changed colouring of moving boxes

--- a/public/lib/erb/portfolio.erb
+++ b/public/lib/erb/portfolio.erb
@@ -12,5 +12,27 @@
         <a target='_blank' href="https://github.com/CONDOTH1/news-summary-api" id="viewCode">View Code</a></div>
     </nav>
     </div>
+    <div class='portfolioIndividual' id='instagram'>
+      <div id="insta">
+        <h4>Photohub</h4>
+        <p>Replica of instagram build with Ruby-on-Rails. You can sign up with facebook or manually, the you can upload images and amire or comment on others.</p>
+      </div>
+      <div class="linkBoxInstagram">
+      <nav class="cl-effect-14" id="cl-effect-14">
+        <a target='_blank' href="https://damp-brushlands-79828.herokuapp.com/">View Demo</a>
+        <a target='_blank' href="https://github.com/CONDOTH1/instagram-challenge" id="viewCode">View Code</a></div>
+    </nav>
+    </div>
+    <div class='portfolioIndividual' id='audioDrive'>
+      <div id="audio">
+        <h4>Audio Dash</h4>
+        <p>Dodging video game with interactive sound track. The readme in the view code link provides full details.</p>
+      </div>
+      <div class="linkBoxAudioDrive">
+      <nav class="cl-effect-14" id="cl-effect-14">
+        <a target='_blank' href="http://www.newgrounds.com/portal/view/681537">View Demo</a>
+        <a target='_blank' href="https://github.com/CONDOTH1/AudioDash" id="viewCode">View Code</a></div>
+    </nav>
+    </div>
 
 </div>
