--- a/public/lib/erb/travel.erb
+++ b/public/lib/erb/travel.erb
@@ -39,89 +39,89 @@
   <div class='photoFrameStill' style='width:450px;height:600px'>
     <img src="./lib/photos/castle_tokyo.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Castle Tokyo</p>
 
   <div class='photoFrameStill' style='width:450px;height:600px'>
     <img src="./lib/photos/kyoto.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Kyoto</p>
 
   <div class='photoFrameStill' style='width:450px;height:600px'>
     <img src="./lib/photos/kyoto2.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">More of Kyoto</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/wilderness.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Wilderness Kyoto</p>
 
   <div class='photoFrameStill' style='height:212;'>
     <img src="./lib/photos/kyoto_pano.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Kyoto panoramic</p>
 
   <div class='photoFrameStill' style='width:450px;height:600px;'>
     <img src="./lib/photos/osaka_night.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Osaka at Night</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/forbidden_city.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Tiananmen Square</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/lhasa.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Potala Palace Tibet</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/tibet.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Plains of Tibet</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/everest3.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Everest</p>
 
   <div class='photoFrameStill' style='transform:rotate(270deg);margin-bottom:100px;margin-top:100px;'>
     <img src="./lib/photos/everest2.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Everest</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/everest.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Everest</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/leaving_tibet.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Leaving the Himalayas</p>
 
   <div class='photoFrameStill' style='transform:rotate(270deg);margin-bottom:100px;margin-top:100px;'>
     <img src="./lib/photos/bridge_nepal.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Bride to Nepal</p>
 
   <div class='photoFrameStill'>
     <img src="./lib/photos/india.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Stormy season India</p>
 
   <div class='photoFrameStill' style='width:450px;height:600px;'>
     <img src="./lib/photos/jordan.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Learning to dive in Jordan</p>
 
   <div class='photoFrameStill' style='width:450px;height:600px;'>
     <img src="./lib/photos/iceland1.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Icelandic wilderness</p>
 
   <div class='photoFrameStill' style='width:450px;height:600px;'>
     <img src="./lib/photos/iceland2.jpg">
   </div>
-  <p class="caption">Sunset over Sapporo, Northern Japan</p>
+  <p class="caption">Iceland with my travelling partner</p>
