chore: updated about text

--- a/public/lib/erb/about.erb
+++ b/public/lib/erb/about.erb
@@ -2,11 +2,11 @@
 
   <h1>About</h1>
 
-<p>I'm a recent graduate of Europe's leading Web Development bootcamp. In a previous life I was a commercial analyst for the second largest pharmaceutical company in the world and a company that is consistently in the top 50 of the world best brands. Before that I was a Second Lieutenant with the Royal Marine Commandos and before that a qualified architectural technologist.</p>
+<p>For the last four years I've been working as a software engineer with a FinTech consultancy in Old Street, London. Loving every minute! Within the last 5 months I've been appointed as Technical Lead of a small team and making the most of the opportunity. During this period I've had experience with NodeJS, AWS, Azure, Bluemix, Docker, Kubernetes, Istio, PostgreSQL, some Python and rigorous testing with Mocha/Chai, Cucumber, Artillery and some home made tools.</p>
 
-<p>I first started coding early in my commercial career. On a daily basis I interacted with technologies that were greatly improved with basic, custom coding, which I taught myself. This relied heavily on the skills I acquired through my previous experiences, such as creative problem solving, dedication, and team work. I soon learned that I could absorb these technologies quickly, which was recently put to the test at Makers Academy. My road to coding has not been straight forward but it has been worth it, I've finally found a path that puts a smile on my face.
+<p>I'm also graduate of Europe's leading Web Development bootcamp. In a previous life I was a commercial analyst for the second largest pharmaceutical company in the world and a company that is consistently in the top 50 of the world best brands. Before all that I qualified architectural technologist.</p>
 
-Makers has provided me with the opportunity to turn this passion into a profession. I am now looking for a role as a junior developer and I am keen to start doing what I thoroughly enjoy as a career, and to growing as a developer.</p>
+<p>I first started coding early in my commercial career. On a daily basis I interacted with technologies that were greatly improved with basic, custom coding, which I taught myself. This relied heavily on the skills I acquired through my previous experiences, such as creative problem solving, dedication, and team work. I soon learned that I could absorb these technologies quickly, which was recently put to the test at Makers Academy. My road to coding has not been straight forward but it has been worth it, I've finally found a path that puts a smile on my face.</p>
 
 <h2>Skills</h2>
 
@@ -16,9 +16,7 @@ Training to be an architectural technologist required the ability to absorb larg
 
 <h3>Hard Work, Team Player.</h3>
 
-<p>The selection process for officer training with the Royal Marine Commandos is one of the toughest in the world and takes up to a year as they only accept 60 candidates in a year. During this period you must prove your physical and mental capabilities. This required hard work and perseverance, the process is designed to be difficult and test you to your limits. While it was very rewarding, it was tough.</p>
-
-<p>Upon selection you must live and work with your team 24 hours a day. It requires selfless dedication to the task and understanding your team and the resources at your disposal.</p>
+<p>I joined JigsawXYZ at the very beginning. It started with the six founders and four engineers. I have been with the company since then and have had to work very long days and weekends to help the company grow. This required working in close teams organising large projects under time pressure. This experience has further developed my confidence as a hard working, team player</p>
 
 <h3>Analytical thinking.</h3>
 
@@ -62,11 +60,8 @@ Competed internationally for Ireland in Muay Thai Boxing during this period.</p>
 
 <p>Pricing Analyst</p>
 
-<p><b>Training with Royal Marine Commandos (August 2009 to March 2010)</b></p>
-<p>Second Leftenant</p>
-
 <h2>Interests</h2>
 
-<p>Brazilian Jiu-Jitsu, Muay Thai Boxing, Running and Potato related activities (I'm Irish).</p>
+<p>Long distance adventure racing, Brazilian Jiu-Jitsu, Muay Thai Boxing and Potato related activities (I'm Irish).</p>
 
 </div>
