fix: update to about

--- a/public/lib/erb/about.erb
+++ b/public/lib/erb/about.erb
@@ -2,7 +2,7 @@
 
   <h1>About</h1>
 
-<p>For the last four years I've been working as a software engineer with a FinTech consultancy in Old Street, London. Loving every minute! Within the last 5 months I've been appointed as Technical Lead of a small team and making the most of the opportunity. During this period I've had experience with NodeJS, AWS, Azure, Bluemix, Docker, Kubernetes, Istio, PostgreSQL, some Python and rigorous testing with Mocha/Chai, Cucumber, Artillery and some home made tools.</p>
+<p>For the last four years I have been working as a software engineer with a FinTech consultancy in Old Street, London. Loving every minute! Within the last 5 months I've been appointed as Technical Lead of a small team and making the most of the opportunity. During this period I've had experience with NodeJS, AWS, Azure, Bluemix, Docker, Kubernetes, Istio, PostgreSQL, some Python and rigorous testing with Mocha/Chai, Cucumber, Artillery and some home made tools.</p>
 
 <p>I'm also graduate of Europe's leading Web Development bootcamp. In a previous life I was a commercial analyst for the second largest pharmaceutical company in the world and a company that is consistently in the top 50 of the world best brands. Before all that I qualified architectural technologist.</p>
 
